kustomize/omni/resources/omni/gateway/httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omni-api
  namespace: omni
spec:
  parentRefs:
    - kind: Gateway
      name: external
      namespace: system-gateway
      sectionName: web-http
    - kind: Gateway
      name: external
      namespace: system-gateway
      sectionName: web-https
  hostnames:
    - omni.${external_domain}
  rules:
    - backendRefs:
        - kind: Service
          name: omni
          port: 8080
