kustomize/omni/resources/omni/gateway/httproute-kube-proxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omni-kube-proxy
  namespace: omni
spec:
  parentRefs:
    - kind: Gateway
      name: external
      namespace: system-gateway
      sectionName: web-http
    - kind: Gateway
      name: external
      namespace: system-gateway
      sectionName: web-https
  hostnames:
    - omni-kube.${external_domain}
  rules:
    - backendRefs:
        - kind: Service
          name: omni-k8s-proxy
          port: 8095
